# imladris

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEVBOX.md  LEARNINGS.md  Makefile  README.md  bitwarden.tf  bootstrap.sh  deploy.sh  docker-compose.yml  factory.ts  litellm-config.yaml  main.tf  outputs.tf  settings.json.template  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  tfplan  tsconfig.json  variables.tf  versions.tf
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.githooks/: commit-msg
Plans/: moonlit-coalescing-octopus.md
ai-failover/: claude-failover
ansible/: ansible.cfg  inventory.yml  site-aurora.yml  site-bake.yml  site-boot.yml  site.yml
cloudformation/: coralogix-otel-collector.yaml  cross-account-stackset.yaml  finops-airbyte.yaml  finops-alb-entra.yaml  finops-dbt-docs.yaml  finops-dbt.yaml  finops-ecs-cluster.yaml  finops-metabase.yaml  finops-rds.yaml  finops-reverse-etl.yaml  finops-vpc.yaml  finops-vpn.yaml  imladris-stack.yaml  signoz-otel-collector.yaml  workspaces-ssm-role.yaml
context/: CLAUDE.md
docs/: TODO-pai-integration.md
docs-site/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
knowledge/: application.md  aws.md  identity.md  network.md  security.md
lib/intake/triage-service/: classifier.py  database.py  entities.py  intake-triage.service  models.py  pyproject.toml  server.py  vectors.py
nix/: flake.nix  home.nix
packer/: imladris.pkr.hcl
pai-sync/: cli.ts  compression.ts  daemon.ts  embedder.ts  memory-cli.ts  (+5 more)
(+872 files in other folders)
