[project]
name = "intake-triage-service"
version = "1.0.0"
description = "Production triage service using spaCy, ChromaDB, and Instructor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "spacy>=3.7.0",
    "chromadb>=0.4.22",
    "instructor>=1.0.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
